--- a/RAL_technical_report/refs.bib
+++ b/RAL_technical_report/refs.bib
@@ -1,7 +1,22 @@
+@article{hhpaalman1962,
+    author    = "H. H. Paalman and C. J. Pings",
+    title     = "Numerical Evaluation of X‐Ray Absorption Factors for Cylindrical Samples and Annular Sample Cells",
+    journal   = "Journal of Applied Physics",
+    year      = "1962",
+}
+
 @manual{wshowells2010,
     author  = "W.S. Howells and V. Garcia-Sakai and F. Demmel and  M.T.F. Telling and F. Fernandez-Alonso",
     title   = "MODES User Guide, Version 3",
     year    = "2010",
+}
+
+@techreport{aksoper1989,
+    author  	= "A. K. Soper and W. S. Howells and A. C. Hannon",
+    title   	= "Analysis Of Time-of-flight Diffraction Data from Liquid And Amorphous Samples",
+    institution = "Rutherford Appleton Laboratory",
+    year    	= "1989",
+    number	= "RAL-89-046",
 }
 
 @incollection{hschober2009,
@@ -25,6 +40,13 @@
 	author = "S. Mukhopadhyay",
 	title = "How to use Mantid for low energy inelastic neutron scattering data analysis on indirect geometry instruments",
 	institution = "Rutherford Appleton Laboratory",
-	year = "2014",
-	
+	year = "2014",	
+}
+
+@techreport{ccarlile1974,
+	author 		= "C. J. Carlile",
+	title		= "Spectrum correction factors for sample holder and self-shielding effects for planar samples in thermal neutron scattering studies",
+	institution 	= "Rutherford Appleton Laboratory",
+	year			= "1974",
+	number		= "RL-74-103",
 }
