--- a/RAL_technical_report/refs.bib
+++ b/RAL_technical_report/refs.bib
@@ -19,6 +19,13 @@
     number	= "RAL-89-046",
 }
 
+@article{dssivia1992,
+	author 	= "D. S. Sivia and C. J. Carlile and W. S. Howells",
+	title	= "Bayesian analysis of quasielastic neutron scattering data",
+	journal	= "Physica B",
+	year		= "1992",
+}
+
 @incollection{hschober2009,
     author    = "H. Schober",
 	title     = "Neutron Scattering Instrumentation.",
