--- a/RAL_technical_report/refs.bib
+++ b/RAL_technical_report/refs.bib
@@ -5,6 +5,13 @@
     year      = "1962",
 }
 
+@book{cwickens2004,
+    author    = "C. D. Wickens and J. Lee and Y. D. Liu and S. Gordon-Becker",
+    title     = "Introduction to Human Factors Engineering",
+    year      = "2004",
+    publisher = "Pearson",
+}
+
 @manual{wshowells2010,
     author  = "W.S. Howells and V. Garcia-Sakai and F. Demmel and  M.T.F. Telling and F. Fernandez-Alonso",
     title   = "MODES User Guide, Version 3",
@@ -47,7 +54,16 @@
 	author = "S. Mukhopadhyay",
 	title = "How to use Mantid for low energy inelastic neutron scattering data analysis on indirect geometry instruments",
 	institution = "Rutherford Appleton Laboratory",
-	year = "2014",	
+	year = "2014",
+	number = "RAL-TR-2014-005",
+}
+
+@techreport{mjohnson1974,
+	author = "M. W. Johnson",
+	title = "Discus: A computer program for the calculation of multiple scattering effects in inelastic neutron scattering experiments",
+	institution = "Atomic Energy Research Establishment",
+	year = "1974",	
+	number	= "R7682",
 }
 
 @techreport{ccarlile1974,
